syntax = "proto3";
package net.trajano.swarm.sampleservice;
import "google/protobuf/struct.proto";

message EchoRequest {
  string message = 1;
}

message JwtClaims {
  map<string, google.protobuf.Value> fields = 1;
//  int64 exp = 2;
}
message EchoResponse {
  string message = 1;
  JwtClaims jwtClaims = 2;
}

service Echo {
  rpc echo(EchoRequest) returns (EchoResponse);
  rpc echoStream(EchoRequest) returns (stream EchoResponse);
}
